set html to baseline

--- a/fourassn/fourapp/templates/index.html
+++ b/fourassn/fourapp/templates/index.html
@@ -1,18 +1,18 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="icon" type="image/svg+xml" href="vite.svg">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Teapot!</title>
-        <script type="module" crossorigin="" src="../static/script.js"></script>
-        <link rel="stylesheet" href="../static/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="vite.svg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teapot!</title>
+    <script type="module" crossorigin="" src="../static/script.js"></script>
+    <link rel="stylesheet" href="../static/style.css">
+</head>
 <body>
     <div id="root">
         <main class="content">
             <div class="phrase">
                 <span class="typed-phrase"></span>
-                <span class="pointer">T</span>he quick brown fox jumps over the lazy dog. This is a classic pangram.
+                <span class="pointer"></span>
             </div>
             <div class="keyboard">
                 <div class="keyboard-row">
@@ -59,7 +59,7 @@
                     <div class="keyboard-key">'</div>
                 </div>
                 <div class="keyboard-row">
-                    <div class="keyboard-key shift highlighted">Shift</div>
+                    <div class="keyboard-key">Shift</div>
                     <div class="keyboard-key">z</div>
                     <div class="keyboard-key">x</div>
                     <div class="keyboard-key">c</div>
@@ -70,7 +70,7 @@
                     <div class="keyboard-key">,</div>
                     <div class="keyboard-key">.</div>
                     <div class="keyboard-key">/</div>
-                    <div class="keyboard-key shift highlighted">Shift</div>
+                    <div class="keyboard-key">Shift</div>
                 </div>
                 <div class="keyboard-key space-bar"> </div>
             </div>
