--- a/fourassn/fourapp/templates/index.html
+++ b/fourassn/fourapp/templates/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/svg+xml" href="vite.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teapot!</title>
-    <script type="module" crossorigin="" src="../static/script.js"></script>
+    <script src="../static/script.js"></script>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
