make keyboard display lowercase letter keypresses

--- a/fourassn/fourapp/templates/index.html
+++ b/fourassn/fourapp/templates/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="vite.svg">
@@ -7,6 +8,7 @@
     <script src="../static/script.js"></script>
     <link rel="stylesheet" href="../static/style.css">
 </head>
+
 <body>
     <div id="root">
         <main class="content">
@@ -16,65 +18,66 @@
             </div>
             <div class="keyboard">
                 <div class="keyboard-row">
-                    <div class="keyboard-key">`</div>
-                    <div class="keyboard-key">1</div>
-                    <div class="keyboard-key">2</div>
-                    <div class="keyboard-key">3</div>
-                    <div class="keyboard-key">4</div>
-                    <div class="keyboard-key">5</div>
-                    <div class="keyboard-key">6</div>
-                    <div class="keyboard-key">7</div>
-                    <div class="keyboard-key">8</div>
-                    <div class="keyboard-key">9</div>
-                    <div class="keyboard-key">0</div>
-                    <div class="keyboard-key">-</div>
-                    <div class="keyboard-key">=</div>
+                    <div class="keyboard-key" id="backtick">`</div>
+                    <div class="keyboard-key" id="1">1</div>
+                    <div class="keyboard-key" id="2">2</div>
+                    <div class="keyboard-key" id="3">3</div>
+                    <div class="keyboard-key" id="4">4</div>
+                    <div class="keyboard-key" id="5">5</div>
+                    <div class="keyboard-key" id="6">6</div>
+                    <div class="keyboard-key" id="7">7</div>
+                    <div class="keyboard-key" id="8">8</div>
+                    <div class="keyboard-key" id="9">9</div>
+                    <div class="keyboard-key" id="0">0</div>
+                    <div class="keyboard-key" id="dash">-</div>
+                    <div class="keyboard-key" id="equals">=</div>
                 </div>
                 <div class="keyboard-row">
-                    <div class="keyboard-key">q</div>
-                    <div class="keyboard-key">w</div>
-                    <div class="keyboard-key">e</div>
-                    <div class="keyboard-key">r</div>
-                    <div class="keyboard-key">t</div>
-                    <div class="keyboard-key">y</div>
-                    <div class="keyboard-key">u</div>
-                    <div class="keyboard-key">i</div>
-                    <div class="keyboard-key">o</div>
-                    <div class="keyboard-key">p</div>
-                    <div class="keyboard-key">[</div>
-                    <div class="keyboard-key">]</div>
-                    <div class="keyboard-key">\</div>
+                    <div class="keyboard-key" id="q">q</div>
+                    <div class="keyboard-key" id="w">w</div>
+                    <div class="keyboard-key" id="e">e</div>
+                    <div class="keyboard-key" id="r">r</div>
+                    <div class="keyboard-key" id="t">t</div>
+                    <div class="keyboard-key" id="y">y</div>
+                    <div class="keyboard-key" id="u">u</div>
+                    <div class="keyboard-key" id="i">i</div>
+                    <div class="keyboard-key" id="o">o</div>
+                    <div class="keyboard-key" id="p">p</div>
+                    <div class="keyboard-key" id="left-bracket">[</div>
+                    <div class="keyboard-key" id="right-bracket">]</div>
+                    <div class="keyboard-key" id="backslash">\</div>
                 </div>
                 <div class="keyboard-row">
-                    <div class="keyboard-key">a</div>
-                    <div class="keyboard-key">s</div>
-                    <div class="keyboard-key">d</div>
-                    <div class="keyboard-key">f</div>
-                    <div class="keyboard-key">g</div>
-                    <div class="keyboard-key">h</div>
-                    <div class="keyboard-key">j</div>
-                    <div class="keyboard-key">k</div>
-                    <div class="keyboard-key">l</div>
-                    <div class="keyboard-key">;</div>
-                    <div class="keyboard-key">'</div>
+                    <div class="keyboard-key" id="a">a</div>
+                    <div class="keyboard-key" id="s">s</div>
+                    <div class="keyboard-key" id="d">d</div>
+                    <div class="keyboard-key" id="f">f</div>
+                    <div class="keyboard-key" id="g">g</div>
+                    <div class="keyboard-key" id="h">h</div>
+                    <div class="keyboard-key" id="j">j</div>
+                    <div class="keyboard-key" id="k">k</div>
+                    <div class="keyboard-key" id="l">l</div>
+                    <div class="keyboard-key" id="semicolon">;</div>
+                    <div class="keyboard-key" id="quote">'</div>
                 </div>
                 <div class="keyboard-row">
-                    <div class="keyboard-key">Shift</div>
-                    <div class="keyboard-key">z</div>
-                    <div class="keyboard-key">x</div>
-                    <div class="keyboard-key">c</div>
-                    <div class="keyboard-key">v</div>
-                    <div class="keyboard-key">b</div>
-                    <div class="keyboard-key">n</div>
-                    <div class="keyboard-key">m</div>
-                    <div class="keyboard-key">,</div>
-                    <div class="keyboard-key">.</div>
-                    <div class="keyboard-key">/</div>
-                    <div class="keyboard-key">Shift</div>
+                    <div class="keyboard-key" id="shift-left">Shift</div>
+                    <div class="keyboard-key" id="z">z</div>
+                    <div class="keyboard-key" id="x">x</div>
+                    <div class="keyboard-key" id="c">c</div>
+                    <div class="keyboard-key" id="v">v</div>
+                    <div class="keyboard-key" id="b">b</div>
+                    <div class="keyboard-key" id="n">n</div>
+                    <div class="keyboard-key" id="m">m</div>
+                    <div class="keyboard-key" id="comma">,</div>
+                    <div class="keyboard-key" id="period">.</div>
+                    <div class="keyboard-key" id="slash">/</div>
+                    <div class="keyboard-key" id="shift-right">Shift</div>
                 </div>
-                <div class="keyboard-key space-bar"> </div>
+                <div class="keyboard-key space-bar" id="space"> </div>
             </div>
         </main>
     </div>
 </body>
+
 </html>
