make punctuation keys also (mostly) work

--- a/fourassn/fourapp/templates/index.html
+++ b/fourassn/fourapp/templates/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="keyboard">
                 <div class="keyboard-row">
-                    <div class="keyboard-key" id="backtick">`</div>
+                    <div class="keyboard-key" id="`">`</div>
                     <div class="keyboard-key" id="1">1</div>
                     <div class="keyboard-key" id="2">2</div>
                     <div class="keyboard-key" id="3">3</div>
@@ -29,8 +29,8 @@
                     <div class="keyboard-key" id="8">8</div>
                     <div class="keyboard-key" id="9">9</div>
                     <div class="keyboard-key" id="0">0</div>
-                    <div class="keyboard-key" id="dash">-</div>
-                    <div class="keyboard-key" id="equals">=</div>
+                    <div class="keyboard-key" id="-">-</div>
+                    <div class="keyboard-key" id="=">=</div>
                 </div>
                 <div class="keyboard-row">
                     <div class="keyboard-key" id="q">q</div>
@@ -43,9 +43,9 @@
                     <div class="keyboard-key" id="i">i</div>
                     <div class="keyboard-key" id="o">o</div>
                     <div class="keyboard-key" id="p">p</div>
-                    <div class="keyboard-key" id="left-bracket">[</div>
-                    <div class="keyboard-key" id="right-bracket">]</div>
-                    <div class="keyboard-key" id="backslash">\</div>
+                    <div class="keyboard-key" id="[">[</div>
+                    <div class="keyboard-key" id="]">]</div>
+                    <div class="keyboard-key" id="\">\</div>
                 </div>
                 <div class="keyboard-row">
                     <div class="keyboard-key" id="a">a</div>
@@ -57,8 +57,8 @@
                     <div class="keyboard-key" id="j">j</div>
                     <div class="keyboard-key" id="k">k</div>
                     <div class="keyboard-key" id="l">l</div>
-                    <div class="keyboard-key" id="semicolon">;</div>
-                    <div class="keyboard-key" id="quote">'</div>
+                    <div class="keyboard-key" id=";">;</div>
+                    <div class="keyboard-key" id="'">'</div>
                 </div>
                 <div class="keyboard-row">
                     <div class="keyboard-key" id="shift-left">Shift</div>
@@ -69,9 +69,9 @@
                     <div class="keyboard-key" id="b">b</div>
                     <div class="keyboard-key" id="n">n</div>
                     <div class="keyboard-key" id="m">m</div>
-                    <div class="keyboard-key" id="comma">,</div>
-                    <div class="keyboard-key" id="period">.</div>
-                    <div class="keyboard-key" id="slash">/</div>
+                    <div class="keyboard-key" id=",">,</div>
+                    <div class="keyboard-key" id=".">.</div>
+                    <div class="keyboard-key" id="/">/</div>
                     <div class="keyboard-key" id="shift-right">Shift</div>
                 </div>
                 <div class="keyboard-key space-bar" id="space"> </div>
