make phrase updates work, no progress on visuals

--- a/fourassn/fourapp/templates/index.html
+++ b/fourassn/fourapp/templates/index.html
@@ -13,8 +13,8 @@
     <div id="root">
         <main class="content">
             <div class="phrase">
-                <span class="typed-phrase"></span>
-                <span class="pointer"></span>
+                <span class="typed"></span>
+                <span class="next"></span>
             </div>
             <div class="keyboard">
                 <div class="keyboard-row">
@@ -74,7 +74,7 @@
                     <div class="keyboard-key" id="/">/</div>
                     <div class="keyboard-key" id="shift-right">Shift</div>
                 </div>
-                <div class="keyboard-key space-bar" id="space"> </div>
+                <div class="keyboard-key space-bar" id=" "> </div>
             </div>
         </main>
     </div>
