--- a/4assnp/assn4/src/App.css
+++ b/4assnp/assn4/src/App.css
@@ -53,15 +53,16 @@ body {
   flex-direction:column;
   align-items:center
 }
-.phrase {
-  padding:16px;
+.prompt {
   font-family:monospace;
   font-weight:700;
   font-size:5em;
   text-align:center;
+}
+.phrase {
   color:#0a307c80
 }
-.phrase .typed-phrase {
+.typed-phrase {
   color:#000
 }
 .highlighted {
